--- a/index.html
+++ b/index.html
@@ -9,8 +9,40 @@
 </head>
 <body>
     <img style="width: auto; height: 100vh" src="bg-image.jpg">
+    <div class="content">
     <div class="description">This is not a real online service! You know you need something like this in your life to help you to realize 
         your deepest dreams. Sign up <em>now</em> to get started.<br><br>You <em>know</em> you want to.
+    </div>
+    <div>
+        <form action="#">
+            <p>Let's do this!</p>
+            <div class="input-fields">
+            <div class="form-part-first">
+                <label for="first_name">FIRST NAME</label>
+                <input type="text" id="first_name" name="first_name">
+
+                <label for="user_email">EMAIL</label>
+                <input type="email" id="user_email" name="user_email">
+
+                <label for="user_password">PASSWORD</label>
+                <input type="password" id="user_password" name="user_password">
+            </div>
+
+            <div class="form-part-second">
+                <label for="last_name">LAST NAME</label>
+                <input type="text" id="last_name" name="last_name">
+
+                <label for="phone_number">PHONE NUMBER</label>
+                <input type="tel" id="phone_number" name="phone_number">
+
+                <label for="confirm_password">FIRST NAME</label>
+                <input type="text" id="confirm_password" name="confirm_password">
+            </div>
+            </div>
+            <button type="submit">Create Account</button>
+            <p>Already have an account? <button>Log in</button></p>
+        </form>
+    </div>
     </div>
 
     
