Add additional classes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
                 <input type="text" id="confirm_password" name="confirm_password">
             </div>
             </div>
+            <div class="form-part-third">
             <button type="submit">Create Account</button>
             <p>Already have an account? <button>Log in</button></p>
+            </div>
         </form>
     </div>
     </div>
