Change font size of description class using vw to make it more adaptive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <form action="#">
-            <p>Let's do this!</p>
+            <p id="action-call">Let's do this!</p>
             <div class="input-fields">
             <div class="form-part-first">
                 <label for="first_name">FIRST NAME</label>
