--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
             <div class="input-fields">
             <div class="form-part-first">
                 <div class="input">
-                <label for="first_name">FIRST NAME</label>
-                <input style="display: block;" type="text" id="first_name" name="first_name">
+                <label for="first_name">FIRST NAME*</label>
+                <input style="display: block;" type="text" id="first_name" name="first_name" required>
                 </div>
                 <div class="input">
-                <label for="user_email">EMAIL</label>
-                <input type="email" id="user_email" name="user_email">
+                <label for="user_email">EMAIL*</label>
+                <input type="email" id="user_email" name="user_email" required>
                 </div>
                 <div class="input">
-                <label for="user_password">PASSWORD</label>
-                <input type="password" id="user_password" name="user_password">
+                <label for="user_password">PASSWORD*</label>
+                <input type="password" id="user_password" name="user_password" required>
                 </div>
             </div>
 
             <div class="form-part-second">
                 <div class="input">
-                <label for="last_name">LAST NAME</label>
-                <input type="text" id="last_name" name="last_name">
+                <label for="last_name">LAST NAME*</label>
+                <input type="text" id="last_name" name="last_name" required>
                 </div>
                 <div class="input">
                 <label for="phone_number">PHONE NUMBER</label>
                 <input type="tel" id="phone_number" name="phone_number">
                 </div>
                 <div class="input">
-                <label for="confirm_password">FIRST NAME</label>
+                <label for="confirm_password">CONFIRM PASSWORD*</label required>
                 <input type="text" id="confirm_password" name="confirm_password">
                 </div>
             </div>
