Add class picture to contain background image with logo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <img id="background-image" style="width: auto; height: 100vh" src="bg-image.jpg" alt="Picture of car in front of a house">
-    <div class="logo">
-    <img id="logo" src="logo.png" alt="Logo image">
-    <h1 id="logo-description">SIGN-UP FORM</h1>
+    <div class="picture">
+        <div class="logo">
+        <img id="logo" src="logo.png" alt="Logo image">
+        <h1 id="logo-description">SIGN-UP FORM</h1>
+        </div>
     </div>
     <div class="content">
     <div class="description">This is not a real online service! You know you need something like this in your life to help you to realize 
