Change input type of confirm_password, add new div to show validation message

--- a/index.html
+++ b/index.html
@@ -48,18 +48,22 @@
                 </div>
                 <div class="input">
                 <label for="confirm_password">CONFIRM PASSWORD*</label required>
-                <input type="text" id="confirm_password" name="confirm_password">
+                <input type="password" id="confirm_password" name="confirm_password">
                 </div>
             </div>
             </div>
+            <div id="validation-message"></div>
+
             <div class="form-part-third">
             <button type="submit" id="create-button">Create Account</button>
             <p id="log-in-para">Already have an account? <a href="" id="log-in-link">Log in</a></p>
             </div>
+
         </form>
     </div>
     </div>
 
+    <script src="index.js"></script>
     
 </body>
 </html>
